# tree-sitter-test

./: Cargo.toml  README.md  build.rs  index.html  style.css  tree-sitter-test.js  tree_sitter_test.wasm
src/: lib.rs  main.rs
